--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,13 @@
     <h1>Hello Extensions</h1>
     <div id="main" class="container">
       <form action="">
-        <input type="text" name="" id="accessToken" />
+        <input type="text" name="" id="userName" placeholder="Github ID" />
+        <input
+          type="text"
+          name=""
+          id="accessToken"
+          placeholder="Github Access Token"
+        />
         <button type="submit" id="saveBtn">save</button>
       </form>
     </div>
