--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,35 @@
 <html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>Coplit To git by Donghun Seol</h1>
+    <h2>https://www.github.com/atoye1</h2>
     <div id="main" class="container">
-      <form action="">
-        <input type="text" name="" id="userName" placeholder="Github ID" />
-        <input
-          type="text"
-          name=""
-          id="accessToken"
-          placeholder="Github Access Token"
-        />
-        <button type="submit" id="saveBtn">save</button>
-      </form>
+      <div id="disclaimer">
+        <p>
+          코플릿 채점결과를 내 깃 저장소에 자동으로 커밋해주는 크롬 익스텐션
+          입니다.
+        </p>
+        <p>깃허브 api를 이용하므로, 깃헙 아이디와 accessToken이 필요합니다.</p>
+        <p>아래에 깃헙 아이디와 accessToken을 입력하고 저장버튼을 눌러주세요</p>
+        <p>데이터는 로컬 스토리지에 저장됩니다.</p>
+      </div>
+      <div id="form">
+        <form action="">
+          <input type="text" name="" id="userName" placeholder="Github ID" />
+          <input
+            type="text"
+            name=""
+            id="accessToken"
+            placeholder="Github Access Token"
+          />
+          <button type="submit" id="saveBtn">save</button>
+        </form>
+      </div>
+      <div id="state">
+        <p></p>
+      </div>
     </div>
   </body>
   <script src="./scripts/popup.js"></script>
