--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <h1>
@@ -12,18 +13,26 @@
       <a href="https://www.github.com/atoye1">https://www.github.com/atoye1</a>
     </p>
     <div id="main" class="container">
+      <hr />
       <div id="disclaimer">
         <p>코플릿 코드를 깃헙에 자동으로 커밋해주는 크롬 익스텐션 입니다.</p>
         <p>깃허브 api를 이용하므로, 깃헙 아이디와 accessToken이 필요합니다.</p>
         <p>아래에 깃헙 아이디와 accessToken을 입력하고 저장버튼을 눌러주세요</p>
         <p>모든 요청과 데이터는 로컬환경에서 처리됩니다.</p>
 
+        <p>혹시 프론트엔드와 디자인 도와주실 분 연락 바랍니다. ✋</p>
+
         <p>
           배포후 의견을 수렴하여 OAuth로 익스텐션에서 바로 로그인 하는 기능을
           구현해볼 예정입니다.
         </p>
+        <p>
+          이후에도 능력이 된다면 백준과 프로그래머스 연동도 구현해보고 싶습니다.
+        </p>
       </div>
+      <hr />
       <div id="form">
+        <h3>👇 이곳에 정보를 입력하세요 👇</h3>
         <form action="">
           <input
             type="text"
